changes to support dropdown menu, part 4

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
       var source = document.getElementById("rmelnetsrc");
 
       const pathArray = sourcePath.split(",");
-      console.log(pathArray[0])
-      console.log(pathArray[1])
-      console.log(pathArray[2])
+      //console.log(pathArray[0])
+      //console.log(pathArray[1])
+      //console.log(pathArray[2])
 
       audio.pause();
       if (pathArray[0]) {
