changes to support dropdown menu, part 5

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     }).change();
 
     function change(sourcePath) {
-      console.log(sourcePath)
+      //console.log(sourcePath)
       var audio = document.getElementById("rmelnetaudio");
       var source = document.getElementById("rmelnetsrc");
 
